Fixed pd column conversion from str to float

--- a/dbg/examples/example_1.ipynb
+++ b/dbg/examples/example_1.ipynb
@@ -2,10 +2,30 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "id": "da0f0c34",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Warning: importing 'simtk.openmm' is deprecated.  Import 'openmm' instead.\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "04b7ba73e0694322905c3db3f80f9181",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": []
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "from dbg import dbg\n",
     "import numpy as np"
@@ -13,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "id": "551c4425",
    "metadata": {},
    "outputs": [],
@@ -23,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "id": "71aa5bb7",
    "metadata": {},
    "outputs": [],
@@ -33,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "id": "d0d598e6",
    "metadata": {},
    "outputs": [
@@ -423,7 +443,7 @@
        "3844   95.140      1.00       47.31       C  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -434,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "id": "5223ccc1",
    "metadata": {},
    "outputs": [],
@@ -444,7 +464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "id": "30a0252d",
    "metadata": {},
    "outputs": [
@@ -454,7 +474,7 @@
        "array([ 6., 23., 21.])"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -465,7 +485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "id": "c6d06ff9",
    "metadata": {},
    "outputs": [
@@ -475,7 +495,7 @@
        "array([106.73025,  15.0231 ,  96.61565])"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -486,7 +506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 9,
    "id": "399ff712",
    "metadata": {},
    "outputs": [],
@@ -496,14 +516,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 10,
    "id": "dc1046a7",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "af3c8050ff6e415984c56ec5aaad9f17",
+       "model_id": "2279b84be7b64a968778557cda609680",
        "version_major": 2,
        "version_minor": 0
       },
