Renamed the module to upload to PyPi

--- a/dgbg/examples/example_1.ipynb
+++ b/dgbg/examples/example_1.ipynb
@@ -27,7 +27,7 @@
     }
    ],
    "source": [
-    "from dbg import dbg\n",
+    "from dgbg import dgbg\n",
     "import numpy as np"
    ]
   },
@@ -38,7 +38,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "box = dbg.binding_box('pdb_files/1a52.pdb')"
+    "box = dgbg.binding_box('pdb_files/1a52.pdb')"
    ]
   },
   {
