--- a/dgbg/examples/example_3.ipynb
+++ b/dgbg/examples/example_3.ipynb
@@ -35,7 +35,7 @@
     }
    ],
    "source": [
-    "from dbg import dbg\n",
+    "from dgbg import dgbg\n",
     "import numpy as np"
    ]
   },
@@ -119,7 +119,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "box = dbg.binding_box('pdb_files/7uty.pdb')\n",
+    "box = dgbg.binding_box('pdb_files/7uty.pdb')\n",
     "ligand_data = box.get_ligand_data('OFR', 'A')"
    ]
   },
