--- a/dgbg/examples/example_4.ipynb
+++ b/dgbg/examples/example_4.ipynb
@@ -35,7 +35,7 @@
     }
    ],
    "source": [
-    "from dbg import dbg\n",
+    "from dgbg import dgbg\n",
     "import numpy as np\n",
     "from vina import Vina"
    ]
@@ -47,7 +47,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "box = dbg.binding_box('pdb_files/7uty.pdb')"
+    "box = dgbg.binding_box('pdb_files/7uty.pdb')"
    ]
   },
   {
